re PR c++/42634 (ICE with -g -O2 -std=c++0x   in copy_fn_p, at cp/decl.c:9973)

Fix PR c++/42634

gcc/cp/ChangeLog:
	PR c++/42634
	* error.c (dump_template_parms): Use innermost template
	arguments before calling count_non_default_template_args.
	(count_non_default_template_args): We are being called with
	template innermost arguments now. There is no need to ensure
	that again.

gcc/testsuite/ChangeLog:
	PR c++/42634
	* g++.dg/template/error45.C: New test.

From-SVN: r155868